--- a/assignment_clustering.ipynb
+++ b/assignment_clustering.ipynb
@@ -124,12 +124,12 @@
         "# 2.0: clusters almost completely merge, difficult to distinguish groups visually"
       ],
       "metadata": {
-        "id": "NgiDpktGc0A2",
-        "outputId": "b5190507-f9bf-4dee-bb79-ee2c02954530",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        }
+        },
+        "id": "NgiDpktGc0A2",
+        "outputId": "b5190507-f9bf-4dee-bb79-ee2c02954530"
       },
       "id": "NgiDpktGc0A2",
       "execution_count": 4,
@@ -175,19 +175,19 @@
         "plt.legend()\n",
         "plt.show()\n",
         "\n",
-        "# Low Noise Levels: show a clearer elbow pattern, especially visible between k=2 and k=3,\n",
-        "# make it easier to select an appropriate k\n",
-        "# High Noise Levels: show less of a distinct elbow, curve flattens out more gradually,\n",
-        "# especially at higher k-values, harder to pinpoint a definitive elbow, noise seems to\n",
-        "# make the cluster separation less distinct"
+        "# Low Noise Levels: show a clearer elbow pattern, especially visible between k=2\n",
+        "# and k=3, # make it easier to select an appropriate k\n",
+        "# High Noise Levels: show less of a distinct elbow, curve flattens out more\n",
+        "# gradually, # especially at higher k-values, harder to pinpoint a definitive\n",
+        "# elbow, noise seems to make the cluster separation less distinct"
       ],
       "metadata": {
-        "id": "TkKUrDVBeUjW",
-        "outputId": "482417a0-55df-4358-dfab-2f00919ebc02",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        }
+        },
+        "id": "TkKUrDVBeUjW",
+        "outputId": "482417a0-55df-4358-dfab-2f00919ebc02"
       },
       "id": "TkKUrDVBeUjW",
       "execution_count": 6,
@@ -225,12 +225,12 @@
       "execution_count": 10,
       "id": "62df40e5",
       "metadata": {
-        "id": "62df40e5",
-        "outputId": "69b858b0-a3be-4351-afd5-6c9a8e47ee19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
-        }
+        },
+        "id": "62df40e5",
+        "outputId": "69b858b0-a3be-4351-afd5-6c9a8e47ee19"
       },
       "outputs": [
         {
@@ -699,16 +699,19 @@
         "smallest_politicians = df[df['Cluster'].isin(smallest_clusters)][['Member', 'Raised', 'Spent', 'Cluster']]\n",
         "print(smallest_politicians)\n",
         "\n",
-        "# The two smallest clusters likely consist of politicians with relatively low\n",
-        "# fundraising and spending. Patty Murray"
+        "# The smallest cluster (Cluster 2) represents the extremely high-dollar\n",
+        "# fundraisers, # not the low-dollar ones. They stand out as outliers at the top-\n",
+        "# right corner of the Raised vs Spent plot. Cluster 2 (the smallest cluster) has\n",
+        "# only 3 members: Mark Kelly, Raphael Warnock, and Val Demings. Cluster 1 is\n",
+        "# much larger, containing everyone else."
       ],
       "metadata": {
-        "id": "5_qe6PWzhGTd",
-        "outputId": "92f310ee-c97d-45ba-ff5f-d9e2cc4d7044",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "5_qe6PWzhGTd",
+        "outputId": "92f310ee-c97d-45ba-ff5f-d9e2cc4d7044"
       },
       "id": "5_qe6PWzhGTd",
       "execution_count": 14,
