--- a/assignment_clustering.ipynb
+++ b/assignment_clustering.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/qjy9ey/clustering_assignment/blob/main/assignment_clustering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "cfc23963-2cc5-4f1d-8278-fb1b2026afc5",
       "metadata": {
         "id": "cfc23963-2cc5-4f1d-8278-fb1b2026afc5"
@@ -888,15 +898,20 @@
         "\n",
         "smallest_clusters_all = cluster_sizes_all.index[:2]\n",
         "smallest_politicians_all = df[df['Cluster_All'].isin(smallest_clusters_all)][['Member', 'Raised', 'Spent', 'Cash on Hand', 'Debts', 'Cluster_All']]\n",
-        "print(smallest_politicians_all)"
+        "print(smallest_politicians_all)\n",
+        "\n",
+        "# This algorithm considers both campaign activity (Raised and Spent) and\n",
+        "# financial position (Cash on Hand and Debts). The candidates are grouped based\n",
+        "# on overall financial footprint, not just how much they raised/spent or how\n",
+        "# much cash/debt they have."
       ],
       "metadata": {
-        "id": "YRN3TWHgk6lQ",
-        "outputId": "a02e9277-8046-4908-e4e9-9eedaa6a47eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 817
-        }
+        },
+        "id": "YRN3TWHgk6lQ",
+        "outputId": "a02e9277-8046-4908-e4e9-9eedaa6a47eb"
       },
       "id": "YRN3TWHgk6lQ",
       "execution_count": 17,
@@ -939,6 +954,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Yes!"
+      ],
+      "metadata": {
+        "id": "NHWpcYQ8lZsQ"
+      },
+      "id": "NHWpcYQ8lZsQ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "cfc78796",
       "metadata": {
@@ -967,7 +994,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
