--- a/assignment_clustering.ipynb
+++ b/assignment_clustering.ipynb
@@ -956,7 +956,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Yes!"
+        "# Yes, by incorporating all four financial metrics, the clustering algorithm\n",
+        "# identified distinct groups of candidates with similar financial profiles."
       ],
       "metadata": {
         "id": "NHWpcYQ8lZsQ"
